[gd_scene load_steps=8 format=3 uid="uid://bquentrbl7i6e"]

[ext_resource type="Script" path="res://Scripts/electro.gd" id="1_hji74"]
[ext_resource type="Script" path="res://Scripts/jellyfish.gd" id="1_hu4qo"]
[ext_resource type="Texture2D" uid="uid://drha6610yw4es" path="res://Art/jellyfishzap.png" id="3_f8u7r"]
[ext_resource type="Texture2D" uid="uid://cxljn22pdlrtc" path="res://Art/jellfish.png" id="4_hch5r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wwtf"]
radius = 150.03

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfsky"]
size = Vector2(49, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k52bm"]
size = Vector2(49, 44.5)

[node name="jellyfish" type="Area2D"]
collision_layer = 8
script = ExtResource("1_hu4qo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("1_hji74")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture_filter = 1
position = Vector2(32, 42)
scale = Vector2(2.4, 2.43)
texture = ExtResource("3_f8u7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 43)
shape = SubResource("CircleShape2D_3wwtf")
disabled = true

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 2.5
one_shot = true

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 2.0
one_shot = true

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(36, 60)
scale = Vector2(2.4, 2.268)
texture = ExtResource("4_hch5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29.5, 32)
shape = SubResource("RectangleShape2D_vfsky")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(34, 32)
shape = SubResource("RectangleShape2D_k52bm")

[node name="pop_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_timer_timeout"]
[connection signal="timeout" from="Area2D/Timer2" to="Area2D" method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="pop_timer" to="." method="_on_pop_timer_timeout"]
